--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,7 @@
+*{
+	box-sizing: border-box;
+}
+
 body{
 	background-color:ghostwhite;
 }
@@ -5,13 +9,14 @@ body{
 nav, h1, footer{
 	text-align: center;
 }
-h4{ 
-	color: blue;
-	text-decoration: underline;
+
+a { 
+	text-decoration: none;
 }
 h1{
     font-size: 200%
 }
+
 img{
 	width: 200px;
     height: 200px;
